fern/versions/v0.2/pages/training-tutorials/index.mdx
---
title: "Training Tutorials"
description: ""
position: 1
---
We have hands-on tutorials with supported training frameworks to help you train with NeMo Gym environments. If you're interested in integrating another training framework, see the [Training Framework Integration Guide](/v0.2/contribute/rl-framework-integration).

<Tip>
See [training-approaches](/v0.2/about/concepts/training-approaches) for a refresher on when to use GRPO, SFT, or DPO.

</Tip>

## RL (GRPO)

<Cards>

<Card title="NeMo RL" href="/v0.2/training-tutorials/nemo-rl-grpo">
Tutorial-series: GRPO training to improve multi-step tool calling on the Workplace Assistant environment, scaling from single-node to multi-node training.

<Badge minimal outlined>nemo rl</Badge> <Badge minimal outlined>grpo</Badge> <Badge minimal outlined>3-5 hours</Badge>
</Card>

<Card title="OpenRLHF" href="https://github.com/OpenRLHF/OpenRLHF/blob/main/examples/python/agent_func_nemogym_executor.py">
Review the agent executor for using NeMo Gym environments with OpenRLHF.

<Badge minimal outlined>openrlhf</Badge>
</Card>

<Card title="Unsloth" href="/v0.2/training-tutorials/unsloth">
GRPO training on instruction following and reasoning environments.

<Badge minimal outlined>unsloth</Badge> <Badge minimal outlined>single-gpu</Badge> <Badge minimal outlined>30 min</Badge>
</Card>

<Card title="NeMo Customizer">
*Coming soon*

<Badge minimal outlined>nemo customizer</Badge> <Badge intent="warning" minimal outlined>in progress</Badge>
</Card>

<Card title="VeRL">
*Coming soon*

<Badge minimal outlined>verl</Badge> <Badge intent="warning" minimal outlined>in progress</Badge>
</Card>

</Cards>

### Multi-Environment Training

<Cards>

<Card title="Multi-Environment Training" href="/v0.2/training-tutorials/multi-environment-training">
Run multiple training environments simultaneously for rollout collection.

<Badge minimal outlined>multi-environment</Badge> <Badge minimal outlined>multi-verifier</Badge>
</Card>

</Cards>

## SFT & DPO

<Cards>

<Card title="Offline Training with Rollouts" href="/v0.2/training-tutorials/offline-training-w-rollouts">
Transform rollouts into training data for supervised fine-tuning (SFT) and direct preference optimization (DPO).

<Badge minimal outlined>sft</Badge> <Badge minimal outlined>dpo</Badge>
</Card>

</Cards>
